objects/Deployment__c.object
<CustomObject>
    <fields>
        <fullName>Build_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build Task</label>
        <referenceTo>Build_Task__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <formula>IF(Deployment_Jobs_Count__c&gt;0, Count_Completed__c /  Deployment_Jobs_Count__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count_Completed__c</fullName>
        <label># Completed</label>
        <summarizedField>Step__c.Count_Completed__c</summarizedField>
        <summaryForeignKey>Step__c.Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>When this need to be deployed</inlineHelpText>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deployed__c</fullName>
        <formula>IF(Deployment_Jobs_Count__c &gt; 0, SUM_Deployed__c / Deployment_Jobs_Count__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deployment_Completed_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is updated when the Deployment Completed email has been sent to prevent subsequent notifications until this marker has been reset.</description>
        <label>Deployment Completed email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_Jobs_Count__c</fullName>
        <label>Deployment Jobs Count</label>
        <summarizedField>Step__c.Org_Count__c</summarizedField>
        <summaryForeignKey>Step__c.Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deployment_command_sent__c</fullName>
        <label>Deployment command sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flag_Status__c</fullName>
        <formula>IMAGE( CASE( Status__c, &quot;Completed Successfully&quot;, &quot;/img/samples/flag_green.gif&quot;, &quot;In progress&quot;, &quot;/img/loading.gif&quot;, &quot;Completed with Errors&quot;, &quot;/img/samples/flag_red.gif&quot;, &quot;/s.gif&quot;), &quot;&quot; )</formula>
        <label>Flag Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Org</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Deployments (From Org)</relationshipLabel>
        <relationshipName>Deployments_From_Org</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SUM_Deployed__c</fullName>
        <label>SUM Deployed</label>
        <summarizedField>Step__c.SUM_Deployed__c</summarizedField>
        <summaryForeignKey>Step__c.Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deploy now</fullName>
                </value>
                <value>
                    <fullName>Deploy later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Deployment_Complete_email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When the deployment completes an email will be sent to the owner of the deployment informing them of the status. Uncheck this checkbox to not receive such an email.</inlineHelpText>
        <label>Send Deployment Complete email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Server_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_260</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Server_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed with Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deployment</label>
    <nameField>
        <label>Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>